<resources>
    <string name="app_name">T_&amp;&amp;_T</string>
    <string name="FACEBOOK_APP_ID">2145774708791940</string>
    <string name="ACCOUNT_KIT_CLIENT_TOKEN">4ea88815f0a7390406c7063710ff85e5</string>
    <string name="fb_login_protocol_scheme">fb2145774708791940</string>
    <string name="ak_login_protocol_scheme">ak2145774708791940</string>
    <string name="GOOGLE_CLIENT_ID">963558543837-jnnf0fhnoooe5aiqn5a3s2pi15m1k16r.apps.googleusercontent.com</string>
    <string name="continute">Tiếp tục</string>
    <string name="login_with_phone">PhoneNumber</string>
    <string name="your_email">Email của bạn</string>
    <string name="your_password">Mật khẩu của bạn</string>
    <string name="comfirm_mail">Bạn phải xác nhận mail trước khi đăng ký</string>
    <string name="yess">Có</string>
    <string name="noo">Không</string>
    <string name="choose_login">Chọn phương thức đăng nhập</string>
    <string name="another_time">Lúc khác</string>
    <string name="login_email">Đăng nhập bằng email</string>
    <string name="enter_email_login_register">Nhập email để đăng nhập hoặc đăng ký</string>
    <string name="enter_pass_login">Nhập mật khẩu của bạn</string>
    <string name="forgot_pass">Quên mật khẩu?</string>
    <string name="enter_pass_register">Tạo mật khẩu cho tài khoản để bảo mật hơn</string>
    <string name="email_validation">Email chưa đúng định dạng</string>
    <string name="create_pass">Tạo mật khẩu</string>
    <string name="enter_pass">Nhập mật khẩu</string>
    <string name="enter_info">Nhập thông tin</string>
    <string name="full_name">Họ và Tên</string>
    <string name="your_gender">Giới tính của bạn</string>
    <string name="your_birthday">Ngày sinh của bạn</string>
    <string name="your_info">Thông tin cá nhân</string>
    <string name="man">Nam</string>
    <string name="woman">Nữ</string>
    <string name="cancel">Hủy</string>
    <string name="password_validate">Mật khẩu phải dài hơn 6 kí tự</string>
    <string name="error_empty">Thông tin bắt buộc</string>
    <string name="news">Tin tức</string>
    <string name="order">Đặt hàng</string>
    <string name="coupon">Khuyến mãi</string>
    <string name="branch">Chi nhánh</string>
    <string name="earn_points">Tích điểm</string>
    <string name="member_of"><![CDATA[Member of T&&T]]></string>
    <string name="info">Thông tin</string>
    <string name="phone_number">Số điện thoại</string>
    <string name="gender">Giới tính</string>
    <string name="password">Mật khẩu</string>
    <string name="birthday">Sinh nhật</string>
    <string name="account">Tài khoản</string>
    <string name="product_like">Nhiều yêu thích</string>
    <string name="eat">Thức ăn</string>
    <string name="drink">Đồ uống</string>
    <string name="product_best_order">Đặt nhiều</string>
    <string name="chosse_method">Chọn phương thức</string>
    <string name="chosse_picture">Chọn hình</string>
    <string name="camera">Máy ảnh</string>
    <string name="enter_your_phone_number">Nhập số điện thoại</string>
    <string name="change_phone_number">Thay đổi số điện thoại</string>
    <string name="enter_keyword">Tên , mô tả sản phẩm</string>
    <string name="login_point">Đăng nhập tích điểm</string>
    <string name="rewards"><![CDATA[T&&T Rewards]]></string>
    <string name="products_like">Sản phẩm yêu thích</string>
    <string name="regulations">Qui định</string>
    <string name="history">Lịch sử đơn hàng</string>
    <string name="Payment">Thanh toán</string>
    <string name="change">Thay đổi</string>
    <string name="permission_deny">Không cho phép truy cập</string>
    <string name="select_address_in_map">Chọn trên bản đồ</string>
    <string name="read_more">Xem thêm</string>
    <string name="read_more_point">Xem thêm…</string>
    <string name="decription">Mô tả</string>
    <string name="collapse">Thu gọn</string>
    <string name="like">Yêu thích</string>
    <string name="share">Chia sẻ</string>
    <string name="search">Tìm kiếm</string>
    <string name="carts">Giỏ hàng</string>
    <string name="customer_evaluation">Khách hàng đánh giá</string>
    <string name="write_evaluation">Viết đánh giá</string>
    <string name="thanks">Cám ơn</string>
    <string name="reply">Trả lời</string>
    <string name="order_now">Đặt hàng ngay</string>
    <string name="get_info_fail">Lỗi lấy thông tin vui lòng thử lại</string>
    <string name="fail_again">Có sự cố xảy ra vui lòng thử lại</string>
    <string name="error_pass">Sai mật khẩu vui lòng thử lại</string>
    <string name="enter_your_evaluation">Nhập đánh giá của bạn</string>
    <string name="small">Nhỏ</string>
    <string name="fit">Vừa</string>
    <string name="large">Lớn</string>
    <string name="topping_for_drink">Topping cho thức uống</string>
    <string name="provisional">Tạm tính</string>
    <string name="add_cart">Thêm vào giỏ</string>
    <string name="name">Tên</string>
    <string name="quantity">Số lượng</string>
    <string name="price">Thành tiền</string>
    <string name="click_remove_item">Nhấn một dòng để xóa trong danh sách</string>
    <string name="question_your_note">Bạn có muốn dặn dò gì không?</string>
    <string name="enter_note">Nhập ghi chú</string>
    <string name="ok">Xong</string>
    <string name="your_note">Dặn dò của bạn</string>
    <string name="list_food">Danh mục món</string>
    <string name="go_to_cart">Đến giỏ hàng</string>
    <string name="search_product_favorite">Tìm kiến sản phẩm yêu thích</string>
    <string name="view_topping_selected">Danh sách toping đã chọn</string>
    <string name="not_topping_selected">Chưa có topping nào được chọn</string>
    <string name="info_customer_order">Thông tin giao hàng</string>
    <string name="list_status_order">Trạng thái đơn hàng</string>
    <string name="update_info_success">Cập nhật thông tin thành công</string>
    <string name="update_info_fail">Có sự cố xảy ra vui lòng thử lại sau</string>
    <string name="list_detail_order">Chi tiết đơn hàng</string>
    <string name="depay_delivery">Thanh toán khi giao hàng</string>
    <string name="total1">Tổng</string>
    <string name="product">sản phẩm</string>
    <string name="transport_fee">Phí vận chuyển</string>
    <string name="total">Thành tiền</string>
    <string name="scan_id_user">Quét mã thành viên</string>
    <string name="title_activity_maps">Map</string>
    <string name="my_location">Vị trí của bạn</string>
    <string name="logout">Đăng xuất</string>
    <string name="go_to_depay">Thanh toán</string>
    <string name="directory">Dẫn đường</string>
    <string name="phone_account_exist">Số điện thoại đã được sửa dụng bởi một tài khoản khác</string>
    <string name="not_update">[Chưa cập nhật]</string>
    <string name="book_address">Sổ địa chỉ</string>
    <string name="save">Lưu</string>
    <string name="turn_off">Tắt</string>
    <string name="turn_on">Bật</string>
    <string name="address">Địa chỉ</string>
    <string name="select_address_default">Chọn địa chỉ làm mặc định</string>
    <string name="info_delivery">Thông tin giao hàng</string>
    <string name="address_delivery_default">Địa chỉ giao hàng mặc định</string>
    <string name="edit">Chỉnh sửa</string>
    <string name="your_cart">Giỏ hàng của bạn</string>
    <string name="example_note">Ví dụ : Ít đá , ngọt 30%</string>
    <string name="update_cart">Cập nhật giỏ hàng</string>
    <string name="remove_cart">Xóa</string>
    <string name="error_phone">Vui lòng nhập số điện thoại của bạn</string>
    <string name="error_phone_exist">Số điện thoại đã tồn tại</string>
    <string name="add_topping">Thêm topping cho thức uống</string>
    <string name="back">Trở lại</string>
    <string name="update">Cập nhật</string>
    <string name="update_topping">Chỉnh sửa topping</string>
    <string name="error_add_topping">Để đảm bảo chất lượng của thức uống, mỗi ly chỉ được thêm tối đa 3 phần topping bất
        kì !!!
    </string>
    <string name="noti">Thông báo</string>
    <string name="know">Đã hiểu</string>
    <string name="can_not_know">Có thể bạn chưa biết</string>
    <string name="lead_add_topping">Cuộn ngang danh sách topping để xem được nhiều hơn !!!</string>
    <string name="not_show_again">Không nhắc lại</string>
    <string name="order_history">Lịch sửa đơn hàng</string>
    <string name="orderr">Đơn hàng</string>
    <string name="continue_order">Tiếp tục mua hàng</string>
    <string name="no_favotite_continute_order">Bạn chưa yêu thích sản phẩm nào !!!</string>
    <string name="no_order_continute_order">Bạn chưa có đơn hàng nào !!!</string>
    <string name="add_address">Thêm thông tin giao hàng</string>
    <string name="please_enter_full_info">Vui lòng nhập đủ thông tin</string>
    <string name="no_address_info">Bạn chưa có thông tin giao hàng nào !!!</string>
    <string name="press_add_address">Thêm một thông tin</string>
    <string name="delete">Xóa</string>
    <string name="restore">Thêm lại</string>
    <string name="you_delete_item">Bạn vừa xóa một thông tin</string>
    <string name="vote">bình chọn</string>
    <string name="not_evaluation">Chưa có nhận xét nào</string>
    <string name="all_evaluation">Tất cả nhận xét</string>
    <string name="new_evaluation">Mới nhất</string>
    <string name="old_evaluation">Cũ nhất</string>
    <string name="five_star">5 sao</string>
    <string name="four_star">4 sao</string>
    <string name="three_star">3 sao</string>
    <string name="two_star">2 sao</string>
    <string name="one_star">1 sao</string>
    <string name="enter_your_reply">Trả lời của bạn</string>
    <string name="all">Tất cả</string>
    <string name="send">Gửi</string>
    <string name="your_evaluate">Đánh giá của bạn</string>
    <string name="add_images_real_if_you_want">Thêm hình ảnh thực tế nếu bạn muốn (Tối đa 3)</string>
    <string name="hint_content_evaluation">Nội dung đánh giá. Tối thiểu 20 , tối đa 4000 ký tự</string>
    <string name="title_evaluation">Tiêu đề (Không bắt buộc)</string>
    <string name="not_rating">Bạn chưa đánh giá</string>
    <string name="dissatisfaction">Rất không hài lòng</string>
    <string name="unsatisfied">Không hài lòng</string>
    <string name="normal">Bình thường</string>
    <string name="satisfied">Hài lòng</string>
    <string name="very_satisfied">Rất hài lòng</string>
    <string name="or">Hoặc</string>
    <string name="error_edt_content_ev">Bạn đã vượt quá 4000 kí tự</string>
    <string name="evaluate_product">Đánh giá sản phẩm</string>
    <string name="message_noti_evaluate">Trả lời của bạn có chưa từ ngữ không cho phép.</string>
    <string name="error_selected_img">Chỉ được tối đa 3 hình !!!</string>
    <string name="selected_address">Chọn địa chỉ này</string>
    <string name="search_addess_delivery">Tìm địa chỉ giao hàng</string>
    <string name="read_all">Xem tất cả</string>
    <string name="me">Tôi</string>
    <string name="selected_image">Chọn hình ảnh</string>
    <string name="done">Xong</string>
    <string name="success_evaluate_check_after">
        <![CDATA[Cám ơn bạn đã gửi đánh giá, T&&T sẽ duyệt đánh giá của bạn trong thời gian sớm nhất!!!]]></string>
    <string name="depay">Thanh toán</string>
    <string name="verify">Xác nhận</string>
    <string name="verify_address">Xác nhận địa chỉ</string>
    <string name="address_deivery">Địa chỉ nhận hàng</string>
    <string name="update_email">Cập nhật email</string>
    <string name="enter_your_email">Nhập email của bạn</string>
    <string name="error_email">Email chưa đúng định dạng</string>
    <string name="your_password_confirm">Xác nhận mật khẩu</string>
    <string name="pass_current">Mật khẩu cũ</string>
    <string name="pass_new">Mật khẩu mới</string>
    <string name="pass_comfirm">Xác nhận</string>
    <string name="your_current_pass">Mật khẩu hiện tại</string>
    <string name="email_regis">Email đăng ký :</string>
    <string name="check_address">Kiểm tra thông tin</string>
    <string name="full_name_order">Họ tên người nhận</string>
</resources>