<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/menu_search"
          android:title="@string/search"
          android:icon="@drawable/ic_search_white"
          app:showAsAction="always"/>

    <item android:id="@+id/menu_like"
          android:title="@string/like"
          android:icon="@drawable/ic_favorite_border_white_24dp"
          app:showAsAction="always"/>

    <item android:id="@+id/menu_share"
          android:title="@string/share"
          android:icon="@drawable/ic_share_white_24dp"
          app:showAsAction="always"/>

    <item android:id="@+id/menu_carts"
          android:title="@string/carts"
          android:icon="@drawable/ic_shopping_cart_white_24dp"
          app:showAsAction="always"/>
</menu>