<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center">


    <LinearLayout
            android:id="@+id/lu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="10dp"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:paddingTop="5dp"
    >

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/full_name"
                android:textSize="14sp"
                android:textStyle="bold"
                android:textColor="@color/colorPrimaryText"
                />

        <EditText
                android:id="@+id/edtHoTen"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:textSize="16sp"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:gravity="center_horizontal"
                android:backgroundTint="@color/colorAccent"
                android:textCursorDrawable="@null"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/phone_number"
                android:textSize="14sp"
                android:textColor="@color/colorPrimaryText"
                android:textStyle="bold" />

        <EditText
                android:id="@+id/edtSoDienThoai"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:textSize="16sp"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:gravity="center_horizontal"
                android:focusableInTouchMode="false"
                android:backgroundTint="@color/colorAccent"
                android:textCursorDrawable="@null"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/address"
                android:textSize="14sp"
                android:textColor="@color/colorPrimaryText"
                android:textStyle="bold" />

        <EditText
                android:id="@+id/edtDiaChiChinhSua"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:textSize="16sp"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:gravity="center_horizontal"
                android:focusableInTouchMode="false"
                android:backgroundTint="@color/colorAccent"
                android:textCursorDrawable="@null"/>

        <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:gravity="center"
                android:padding="5dp">

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginTop="2dp"
                    android:text="@string/select_address_default"
                    android:textColor="#ff0000"
                    android:textSize="12sp" />

            <Switch
                    android:id="@+id/switchDefault"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentEnd="true"
                    android:textOff="@string/turn_off"
                    android:textOn="@string/turn_on"
            />
        </RelativeLayout>
    </LinearLayout>

    <Button
        android:id="@+id/btnLuu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/lu"
        android:layout_marginTop="10dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/shape_btn_login"
        android:backgroundTint="@color/colorAccent"
        android:layout_alignParentStart="true"
        android:text="@string/save"/>
</RelativeLayout>