<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#cfcfcf"
                android:padding="5dp">

    <TextView
            android:id="@+id/txtMan"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_width="match_parent"
            android:text="@string/man"
            android:textSize="24sp"
            android:gravity="center"
            android:background="#fff"
            android:padding="5dp"
            android:textColor="@color/colorPrimaryText"
            android:layout_height="wrap_content"/>

    <TextView
            android:id="@+id/txtWoman"
            android:layout_below="@id/txtMan"
            android:text="@string/woman"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:gravity="center"
            android:padding="5dp"
            android:background="#fff"
            android:layout_marginTop="1dp"
            android:textColor="@color/colorPrimaryText"/>

    <TextView
            android:id="@+id/txtClose"
            android:layout_below="@id/txtWoman"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:textSize="24sp"
            android:gravity="center"
            android:background="#fff"
            android:padding="5dp"
            android:textColor="@color/colorPrimaryText"/>
</RelativeLayout>