<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".mvp.view.customer.ChangePasswordActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbarChangePass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true">

    </android.support.v7.widget.Toolbar>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/toolbarChangePass"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true">

        <TextView
            android:id="@+id/txtEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/email_regis"
            android:ellipsize="end"
            android:background="@android:color/transparent"/>

        <RelativeLayout
            android:id="@+id/relaEdtPassCurrent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/txtEmail"
            android:background="#fff"
            android:paddingEnd="8dp"
            android:paddingStart="8dp">

            <TextView
                android:id="@+id/txtTitlePassCurrent"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_marginStart="0dp"
                android:textSize="14sp"
                android:textColor="@color/colorPrimaryText"
                android:text="@string/pass_current" />
            <EditText
                android:id="@+id/edtPassCurrent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@+id/txtTitlePassCurrent"
                android:background="@drawable/shape_stroke_rectangle"
                android:layout_marginStart="4dp"
                android:padding="12dp"
                android:inputType="textPassword"
                android:hint="@string/your_current_pass"
                android:textSize="14sp"/>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/relaEdtPassNew"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/relaEdtPassCurrent"
            android:layout_marginTop="2dp"
            android:background="#fff"
            android:paddingEnd="8dp"
            android:paddingStart="8dp">

            <TextView
                android:id="@+id/txtTitlePassNew"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_marginStart="0dp"
                android:textSize="14sp"
                android:textColor="@color/colorPrimaryText"
                android:text="@string/pass_new" />
            <EditText
                android:id="@+id/edtPassNew"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@+id/txtTitlePassNew"
                android:padding="12dp"
                android:textSize="14sp"
                android:inputType="textPassword"
                android:hint="@string/pass_new"
                android:background="@drawable/shape_stroke_rectangle"
                android:layout_marginStart="4dp"/>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/relaEdtPassConfirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/relaEdtPassNew"
            android:layout_marginTop="2dp"
            android:background="#fff"
            android:paddingEnd="8dp"
            android:paddingStart="8dp"
            >

            <TextView
                android:id="@+id/txtTitlePassConfirm"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_marginStart="0dp"
                android:textSize="14sp"
                android:textColor="@color/colorPrimaryText"
                android:text="@string/pass_comfirm" />
            <EditText
                android:id="@+id/edtPassConfirm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@+id/txtTitlePassConfirm"
                android:padding="12dp"
                android:textSize="14sp"
                android:inputType="textPassword"
                android:hint="@string/your_password_confirm"
                android:background="@drawable/shape_stroke_rectangle"
                android:layout_marginStart="4dp"/>
        </RelativeLayout>


    </RelativeLayout>

</RelativeLayout>