<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <ScrollView
            android:layout_width="match_parent"
            android:fillViewport="true"
            android:layout_height="match_parent">
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#fff"
                android:orientation="vertical">

            <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingStart="30dp"
                    android:paddingEnd="30dp"
                    android:gravity="center">

                <TextView
                        android:id="@+id/txtTitleInfo"
                        android:layout_width="match_parent"
                        android:padding="5dp"
                        android:gravity="center"
                        android:textSize="22sp"
                        android:layout_alignParentTop="true"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentEnd="true"
                        android:textColor="@color/colorPrimaryText"
                        android:text="@string/your_info"
                        android:layout_height="wrap_content"/>

                <android.support.design.widget.TextInputLayout
                        android:id="@+id/textInputLayoutFullName"
                        android:layout_below="@id/txtTitleInfo"
                        android:layout_width="match_parent"
                        android:layout_marginTop="20dp"
                        android:layout_height="wrap_content">

                    <android.support.design.widget.TextInputEditText
                            android:layout_width="match_parent"
                            android:id="@+id/edtFullName"
                            android:layout_height="wrap_content"
                            android:inputType="textPersonName"
                            android:hint="@string/full_name"/>
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                        android:id="@+id/textInputLayoutGender"
                        android:layout_below="@id/textInputLayoutFullName"
                        android:layout_width="match_parent"
                        android:layout_marginTop="20dp"
                        android:layout_height="wrap_content">

                    <android.support.design.widget.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/edtGender"
                            android:focusableInTouchMode="false"
                            android:hint="@string/your_gender"/>
                </android.support.design.widget.TextInputLayout>


                <android.support.design.widget.TextInputLayout
                        android:id="@+id/textInputLayoutBirthday"
                        android:layout_below="@id/textInputLayoutGender"
                        android:layout_width="match_parent"
                        android:layout_marginTop="20dp"
                        android:layout_height="wrap_content">

                    <android.support.design.widget.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/edtBirthday"
                            android:focusableInTouchMode="false"
                            android:hint="@string/your_birthday"/>

                </android.support.design.widget.TextInputLayout>

                <Button
                        android:id="@+id/btnContinuteInfo"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:layout_below="@+id/textInputLayoutBirthday"
                        android:background="@drawable/shape_btn_login"
                        android:backgroundTint="@color/colorAccent"
                        android:textColor="@color/colorIconsText"
                        android:text="@string/continute"/>

            </RelativeLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>